[package]
name = "wasm_wrapper"
version = "0.1.0"
authors = ["mattwparas <matthewparas2020@u.northwestern.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ['cdylib']

[workspace]
members = ["."]

[profile.release]
lto = true

[dependencies]
fluvio-smartstream = { path = "../" }
